added projectiles logic, deflect logic
basic deflect logic, basic logic of spawning projectlies. added icon for player

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,19 @@
 list=Array[Dictionary]([{
 "base": &"Area2D",
+"class": &"BasicProjectile",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/basic_projectile.gd"
+}, {
+"base": &"Area2D",
 "class": &"Enemy",
 "icon": "",
 "language": &"GDScript",
 "path": "res://scenes/enemy.gd"
+}, {
+"base": &"Area2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/player.gd"
 }])
