--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/atlas_17.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/enemy.tscn")
-current_scene="res://scenes/main_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/enemy.tscn", "res://scenes/basic_projectile.tscn", "res://scenes/main_scene.tscn", "res://scenes/player.tscn")
+current_scene="res://scenes/player.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/enemy.gd", "res://scenes/sprite_2d.gd"]
-selected_script="res://scenes/enemy.gd"
-open_help=["@GlobalScope", "CanvasItem", "Control", "Node2D", "Vector2"]
+open_scripts=["res://scenes/basic_projectile.gd", "res://scenes/enemy.gd", "res://scenes/player.gd"]
+selected_script="res://scenes/player.gd"
+open_help=["@GlobalScope", "Area2D", "CanvasItem", "Control", "Input", "Node2D", "Rect2", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
