--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://scenes/sprite_2d.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 58,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 26,
-"scroll_position": 2.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scenes/enemy.gd]
 
 state={
@@ -20,8 +6,40 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 10,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/basic_projectile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 14,
+"selection_to_column": 68,
+"selection_to_line": 14,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
