--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=320
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/atlas_17.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://config/SignalBus.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://config/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/enemy.tscn", "res://scenes/basic_projectile.tscn", "res://scenes/main_scene.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/enemy.tscn", "res://scenes/basic_projectile.tscn", "res://scenes/player.tscn", "res://scenes/main_scene.tscn", "res://scenes/ui.tscn", "res://scenes/gpu_particles_2d.tscn", "res://scenes/player_laser.tscn")
+current_scene="res://scenes/player_laser.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=9
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/basic_projectile.gd", "res://scenes/enemy.gd", "res://scenes/player.gd"]
+open_scripts=["res://scenes/basic_projectile.gd", "res://scenes/enemy.gd", "res://scenes/main_scene.gd", "res://scenes/player.gd", "res://scenes/player_laser.gd", "res://config/SignalBus.gd", "res://scenes/ui.gd"]
 selected_script="res://scenes/player.gd"
-open_help=["@GlobalScope", "Area2D", "CanvasItem", "Control", "Input", "Node2D", "Rect2", "Vector2"]
+open_help=["@GlobalScope", "Area2D", "CanvasItem", "Control", "Input", "Node", "Node2D", "Rect2", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
