added overcharge and shield mechanic

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://config/SignalBus.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://config/", "res://assets/PNG/", "res://assets/PNG/Effects/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://config/", "res://assets/Spritesheet/", "res://assets/recent/", "res://assets/PNG/", "res://assets/PNG/UI/", "res://assets/PNG/Power-ups/", "res://assets/PNG/Lasers/", "res://assets/PNG/Damage/", "res://assets/Bonus/", "res://assets/Backgrounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/enemy.tscn", "res://scenes/basic_projectile.tscn", "res://scenes/player.tscn", "res://scenes/game_scene.tscn", "res://scenes/ui.tscn", "res://scenes/gpu_particles_2d.tscn", "res://scenes/player_laser.tscn", "res://scenes/main_menu.tscn")
-current_scene="res://scenes/player.tscn"
+current_scene="res://scenes/game_scene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/basic_projectile.gd", "res://scenes/enemy.gd", "res://scenes/game_scene.gd", "res://scenes/main_menu.gd", "res://scenes/player.gd", "res://scenes/player_laser.gd", "res://config/SignalBus.gd", "res://scenes/ui.gd"]
-selected_script="res://scenes/player.gd"
-open_help=["@GDScript", "@GlobalScope", "Area2D", "CanvasItem", "Control", "Input", "Node", "Node2D", "Rect2", "Vector2"]
+open_scripts=["res://scripts/BasicEnemy.gd", "res://scenes/basic_projectile.gd", "res://scenes/camera_2d.gd", "res://scenes/enemy.gd", "res://scenes/game_scene.gd", "res://scenes/main_menu.gd", "res://scenes/player.gd", "res://scenes/player_laser.gd", "res://shield_explosion.gd", "res://config/SignalBus.gd", "res://scenes/ui.gd"]
+selected_script="res://scenes/game_scene.gd"
+open_help=["@GDScript", "@GlobalScope", "Area2D", "CanvasItem", "CollisionShape2D", "Control", "Input", "Node", "Node2D", "Rect2", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
