--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -9,19 +9,19 @@ list=Array[Dictionary]([{
 "class": &"BasicProjectile",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scenes/basic_projectile.gd"
+"path": "res://scenes/projectiles/basic_projectile.gd"
 }, {
 "base": &"BasicProjectile",
 "class": &"EliteProjectile",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scenes/elite_projectile.gd"
+"path": "res://scenes/projectiles/elite_projectile.gd"
 }, {
 "base": &"Area2D",
-"class": &"Enemy",
+"class": &"FirstBoss",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scenes/enemy.gd"
+"path": "res://scenes/first_boss/first_boss.gd"
 }, {
 "base": &"Area2D",
 "class": &"Player",
