--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,4 +1,4 @@
-[res://scenes/enemy.tscn]
+[res://scenes/enemies/simple_enemy.tscn]
 
 groups=[&"enemy"]
 
@@ -6,10 +6,10 @@ groups=[&"enemy"]
 
 groups=[&"player"]
 
-[res://elite_enemy.tscn]
+[res://scenes/enemies/elite_enemy.tscn]
 
 groups=[&"enemy"]
 
-[res://scenes/elite_projectile.tscn]
+[res://scenes/projectiles/elite_projectile.tscn]
 
-groups=[&"projectile", &"elite_projectile"]
+groups=[&"elite_projectile", &"projectile"]
