--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,49 +1,13 @@
-[res://scenes/enemy.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 67,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 64,
-"scroll_position": 50.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 64,
-"selection_to_column": 67,
-"selection_to_line": 64,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/basic_projectile.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 18,
-"selection_to_column": 1,
-"selection_to_line": 22,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scenes/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 75,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 100,
-"scroll_position": 84.0,
+"row": 80,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,20 +40,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scenes/player_laser.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scenes/main_menu.gd]
 
 state={
@@ -109,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 20,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 28,
-"selection_to_column": 32,
-"selection_to_line": 28,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -140,7 +86,35 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://shield_explosion.gd]
+[res://scripts/BasicEnemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 2.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://config/EnemyFactory.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 7.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/shield_explosion.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -154,39 +128,81 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/BasicEnemy.gd]
+[res://assets/recent/Enemies/Readme.txt]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 62,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 60,
-"selection_from_line": 21,
-"selection_to_column": 62,
-"selection_to_line": 21,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://scenes/first_boss/first_boss.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 52,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://elite_enemy.gd]
+[res://scenes/enemies/elite_enemy.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 62,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 62,
+"selection_to_column": 47,
+"selection_to_line": 69,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/enemies/simple_enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 33,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/projectiles/basic_projectile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scenes/elite_projectile.gd]
+[res://scenes/projectiles/elite_projectile.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -195,6 +211,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/projectiles/player_laser.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://boss_rocket.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
