added boss movement, laser attack,

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -14,6 +14,10 @@ groups=[&"enemy"]
 
 groups=[&"elite_projectile", &"projectile"]
 
+[res://scenes/projectiles/boss_rocket.tscn]
+
+groups=[&"rocket"]
+
 [res://scenes/first_boss/first_boss.tscn]
 
 groups=[&"beam"]
