--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,27 +17,27 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/healthbar/healthbarUnder (1).png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://assets/", "res://assets/recent/Player/Main Ship/", "res://assets/recent/Player/Main Ship/Main Ship - Weapons/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/PNGs/", "res://assets/recent/Player/Main Ship/Main Ship - Engines/PNGs/", "res://assets/recent/Player/Main Ship/Main Ship - Engine Effects/", "res://assets/recent/Enemies/Kla\'ed/", "res://assets/recent/Enemies/Kla\'ed/Projectiles/PNGs/", "res://assets/recent/Enemies/_Previews/", "res://assets/PNG/Power-ups/", "res://assets/healthbar/", "res://assets/healthbar/Pixel Health Bar Asset Pack 1 by Adwit Rahman/Pixel Health Bar 1/", "res://assets/backgrounds/Small 512x512/", "res://assets/backgrounds/Small 512x512/Purple Nebula/")
+dock_filesystem_selected_paths=PackedStringArray("res://globals/GameManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/projectiles/", "res://scenes/enemies/", "res://globals/", "res://assets/recent/Player/Main Ship/", "res://assets/recent/Player/Main Ship/Main Ship - Weapons/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/PNGs/", "res://assets/recent/Player/Main Ship/Main Ship - Engines/PNGs/", "res://assets/recent/Player/Main Ship/Main Ship - Engine Effects/", "res://assets/recent/Enemies/Kla\'ed/", "res://assets/recent/Enemies/Kla\'ed/Projectiles/PNGs/", "res://assets/recent/Enemies/_Previews/", "res://assets/PNG/Power-ups/", "res://assets/healthbar/Pixel Health Bar Asset Pack 1 by Adwit Rahman/Pixel Health Bar 1/", "res://assets/backgrounds/Small 512x512/", "res://assets/backgrounds/Small 512x512/Purple Nebula/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/enemies/simple_enemy.tscn", "res://scenes/player.tscn", "res://scenes/enemies/elite_enemy.tscn", "res://scenes/projectiles/elite_projectile.tscn", "res://scenes/game_scene.tscn", "res://scenes/first_boss/first_boss.tscn", "res://scenes/projectiles/boss_rocket.tscn", "res://scenes/first_boss/first_boss_arena.tscn", "res://scenes/ui.tscn")
-current_scene="res://scenes/ui.tscn"
+open_scenes=PackedStringArray("res://scenes/enemies/simple_enemy.tscn", "res://scenes/player.tscn", "res://scenes/enemies/elite_enemy.tscn", "res://scenes/projectiles/elite_projectile.tscn", "res://scenes/game_scene.tscn", "res://scenes/first_boss/first_boss.tscn", "res://scenes/projectiles/boss_rocket.tscn", "res://scenes/first_boss/first_boss_arena.tscn", "res://scenes/ui.tscn", "res://scenes/projectiles/basic_projectile.tscn")
+current_scene="res://scenes/first_boss/first_boss.tscn"
 center_split_offset=-252
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/BasicEnemy.gd", "res://scenes/projectiles/basic_projectile.gd", "res://boss_rocket.gd", "res://scenes/camera_2d.gd", "res://scenes/enemies/elite_enemy.gd", "res://scenes/projectiles/elite_projectile.gd", "res://globals/EnemyFactory.gd", "res://scenes/first_boss/first_boss.gd", "res://globals/GameManager.gd", "res://scenes/game_scene.gd", "res://scenes/main_menu.gd", "res://scenes/player.gd", "res://scenes/projectiles/player_laser.gd", "res://assets/recent/Enemies/Readme.txt", "res://scenes/shield_explosion.gd", "res://globals/SignalBus.gd", "res://scenes/enemies/simple_enemy.gd", "res://scenes/ui.gd"]
-selected_script="res://scenes/player.gd"
+open_scripts=["res://scripts/BasicEnemy.gd", "res://scenes/projectiles/basic_projectile.gd", "res://boss_rocket.gd", "res://scenes/camera_2d.gd", "res://scenes/enemies/elite_enemy.gd", "res://scenes/projectiles/elite_projectile.gd", "res://globals/EnemyFactory.gd", "res://scenes/first_boss/first_boss.gd", "res://globals/GameManager.gd", "res://scenes/game_scene.gd", "res://scenes/main_menu.gd", "res://scenes/player.gd", "res://scenes/projectiles/player_laser.gd", "res://globals/ProjectileFactory.gd", "res://assets/recent/Enemies/Readme.txt", "res://scenes/shield_explosion.gd", "res://globals/SignalBus.gd", "res://scenes/enemies/simple_enemy.gd", "res://scenes/ui.gd"]
+selected_script="res://scenes/first_boss/first_boss.gd"
 open_help=["@GDScript", "@GlobalScope", "AnimatedSprite2D", "Area2D", "AudioStreamPlayer", "CanvasItem", "CollisionShape2D", "Control", "Input", "Node", "Node2D", "Object", "RayCast2D", "Rect2", "SceneTree", "Vector2"]
-script_split_offset=174
+script_split_offset=267
 list_split_offset=0
 zoom_factor=1.0
 
