refactored Player, added attack component
also started refacroting Projectiles system

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/BasicEnemy.gd"
 }, {
+"base": &"BasicProjectile",
+"class": &"BasicLaserProjectile",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/basic_types/basic_laser_projectile.gd"
+}, {
 "base": &"Area2D",
 "class": &"BasicProjectile",
 "icon": "",
@@ -17,7 +23,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scenes/ui/window.gd"
 }, {
-"base": &"BasicProjectile",
+"base": &"BasicLaserProjectile",
 "class": &"BigBossLaser",
 "icon": "",
 "language": &"GDScript",
@@ -59,9 +65,15 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scenes/level_one/level_one.gd"
 }, {
-"base": &"Area2D",
+"base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
 "path": "res://scenes/player.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerAttackComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/player_related_scripts/attack_component.gd"
 }])
