--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -14,28 +14,28 @@ dock_hsplit_3=-420
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=207
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=2
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/projectiles/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/ui/", "res://assets/ui/Vector/", "res://assets/ui/PNG/", "res://assets/ui/PNG/Yellow/", "res://assets/recent/Player/Main Ship/", "res://assets/recent/Player/Main Ship/Main Ship - Weapons/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/", "res://assets/recent/Player/Main Ship/Main Ship - Engine Effects/", "res://assets/recent/Enemies/", "res://assets/recent/Enemies/Kla\'ed/", "res://assets/recent/Enemies/Kla\'ed/Weapons/", "res://assets/recent/Enemies/Kla\'ed/Engine/", "res://assets/recent/Enemies/Kla\'ed/Base/", "res://assets/recent/Enemies/_Previews/", "res://assets/explosions/explosion pack 1/", "res://assets/explosions/explosion pack 1/Explosions/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-g/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-f/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-e/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-d/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-c/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-b/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-a/", "res://assets/backgrounds/Small 512x512/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/projectiles/", "res://scenes/basic_types/", "res://assets/ui/Vector/", "res://assets/ui/PNG/", "res://assets/ui/PNG/Yellow/", "res://assets/recent/Player/", "res://assets/recent/Player/Main Ship/", "res://assets/recent/Player/Main Ship/Main Ship - Weapons/", "res://assets/recent/Player/Main Ship/Main Ship - Shields/", "res://assets/recent/Player/Main Ship/Main Ship - Engine Effects/", "res://assets/recent/Player/Main Ship/Main Ship - Bases/", "res://assets/recent/Enemies/Kla\'ed/", "res://assets/recent/Enemies/Kla\'ed/Weapons/", "res://assets/recent/Enemies/Kla\'ed/Engine/", "res://assets/recent/Enemies/Kla\'ed/Base/", "res://assets/recent/Enemies/_Previews/", "res://assets/explosions/explosion pack 1/", "res://assets/explosions/explosion pack 1/Explosions/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-g/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-f/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-e/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-d/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-c/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-b/", "res://assets/explosions/explosion pack 1/Explosions/explosion-1-a/", "res://assets/backgrounds/Small 512x512/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/ui/window.tscn", "res://scenes/hud.tscn", "res://scenes/main_menu/main_menu.tscn", "res://scenes/level_one/level_one.tscn", "res://scenes/player.tscn", "res://scenes/first_boss/first_boss_arena.tscn", "res://scenes/first_boss/first_boss.tscn", "res://scenes/projectiles/boss_large_laser_projectile.tscn", "res://scenes/projectiles/player_laser.tscn", "res://scenes/projectiles/boss_rocket.tscn")
-current_scene="res://scenes/projectiles/boss_rocket.tscn"
+open_scenes=PackedStringArray("res://scenes/level_one/level_one.tscn", "res://scenes/first_boss/first_boss.tscn", "res://scenes/projectiles/boss_large_laser_projectile.tscn", "res://scenes/projectiles/boss_rocket.tscn", "res://scenes/player/ghost_dash.tscn", "res://scenes/projectiles/player_laser.tscn", "res://scenes/player.tscn", "res://scenes/enemies/simple_enemy.tscn", "res://scenes/projectiles/basic_enemy_laser.tscn")
+current_scene="res://scenes/level_one/level_one.tscn"
 center_split_offset=-256
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/BasicEnemy.gd", "res://scenes/projectiles/basic_projectile.gd", "res://scenes/enemies/bomb_drone_enemy.gd", "res://scripts/boss_state_machine/boss_beam_state.gd", "res://scripts/boss_state_machine/boss_idle_state.gd", "res://boss_large_laser_projectile.gd", "res://scripts/boss_state_machine/boss_laser_state.gd", "res://boss_rocket.gd", "res://scripts/boss_state_machine/boss_rocket_state.gd", "res://scripts/boss_state_machine/boss_state.gd", "res://scripts/boss_state_machine/boss_state_machine.gd", "res://scenes/camera_2d.gd", "res://scenes/enemies/elite_enemy.gd", "res://scenes/projectiles/elite_projectile.gd", "res://globals/EnemyFactory.gd", "res://scenes/first_boss/first_boss.gd", "res://scenes/first_boss/first_boss_arena.gd", "res://globals/GameManager.gd", "res://scenes/hud.gd", "res://scenes/level_one/level_one.gd", "res://scenes/main_menu/main_menu.gd", "res://scenes/player.gd", "res://scenes/projectiles/player_laser.gd", "res://globals/ProjectileFactory.gd", "res://assets/recent/Enemies/Readme.txt", "res://assets/player_health/README.txt", "res://scenes/shield_explosion.gd", "res://globals/SignalBus.gd", "res://scenes/enemies/simple_enemy.gd", "res://scenes/ui/window.gd"]
-selected_script="res://boss_rocket.gd"
+open_scripts=["res://scripts/player_related_scripts/attack_component.gd", "res://scripts/BasicEnemy.gd", "res://scenes/basic_types/basic_laser_projectile.gd", "res://scenes/projectiles/basic_projectile.gd", "res://scenes/enemies/bomb_drone_enemy.gd", "res://scripts/boss_state_machine/boss_beam_state.gd", "res://scripts/boss_state_machine/boss_idle_state.gd", "res://boss_large_laser_projectile.gd", "res://scripts/boss_state_machine/boss_laser_state.gd", "res://boss_rocket.gd", "res://scripts/boss_state_machine/boss_rocket_state.gd", "res://scripts/boss_state_machine/boss_state.gd", "res://scripts/boss_state_machine/boss_state_machine.gd", "res://scenes/camera_2d.gd", "res://scenes/enemies/elite_enemy.gd", "res://scenes/projectiles/elite_projectile.gd", "res://globals/EnemyFactory.gd", "res://scenes/first_boss/first_boss.gd", "res://scenes/first_boss/first_boss_arena.gd", "res://globals/GameManager.gd", "res://ghost_dash.gd", "res://scenes/hud.gd", "res://scenes/level_one/level_one.gd", "res://scenes/main_menu/main_menu.gd", "res://scenes/player.gd", "res://globals/ProjectileFactory.gd", "res://assets/recent/Enemies/Readme.txt", "res://assets/player_health/README.txt", "res://scenes/shield_explosion.gd", "res://globals/SignalBus.gd", "res://scenes/enemies/simple_enemy.gd", "res://scenes/ui/window.gd"]
+selected_script="res://scenes/enemies/simple_enemy.gd"
 open_help=["@GDScript", "@GlobalScope", "AcceptDialog", "AnimatedSprite2D", "Area2D", "Array", "AudioStreamPlayer", "CanvasItem", "CollisionShape2D", "ConfirmationDialog", "Control", "Input", "Node", "Node2D", "Object", "RayCast2D", "Rect2", "SceneTree", "Signal", "Timer", "Vector2", "Window"]
 script_split_offset=197
 list_split_offset=0
