--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,7 +1,3 @@
-[res://scenes/enemies/simple_enemy.tscn]
-
-groups=[&"enemy"]
-
 [res://scenes/enemies/bomb_drone_enemy.tscn]
 
 groups=[&"projectile"]
@@ -18,10 +14,6 @@ groups=[&"elite_projectile", &"projectile"]
 
 groups=[&"projectile"]
 
-[res://scenes/player.tscn]
-
-groups=[&"player"]
-
 [res://scenes/first_boss/first_boss.tscn]
 
 groups=[&"boss", &"beam"]
@@ -29,3 +21,15 @@ groups=[&"boss", &"beam"]
 [res://scenes/projectiles/boss_rocket.tscn]
 
 groups=[&"rocket"]
+
+[res://scenes/projectiles/player_laser.tscn]
+
+groups=[&"LaserProjectile"]
+
+[res://scenes/player.tscn]
+
+groups=[&"player"]
+
+[res://scenes/enemies/simple_enemy.tscn]
+
+groups=[&"enemy"]
